# f1tenth_miru3

./: .gitignore  CLAUDE.md  README.md  convert.py  frames.gv  visualize_centerline_distances.py
bags/maps/my_carto_map/: my_carto_map.pgm  my_carto_map.yaml
bags/maps/with_jg/: with_jg.pgm  with_jg.yaml
config/: amcl.yaml  f1tenth_slam_params.yaml  f1tenth_view.rviz  slam_local.yaml
install/: local_setup.sh  setup.sh
install/ackermann_mux/include/ackermann_mux/: ackermann_mux.hpp  ackermann_mux_diagnostics.hpp  ackermann_mux_diagnostics_status.hpp  params_helpers.hpp  topic_handle.hpp  utils.hpp
install/ackermann_mux/lib/ackermann_mux/: ackermann_mux
install/ackermann_mux/share/ackermann_mux/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/center_follow_cpp/lib/center_follow_cpp/: center_follower
install/center_follow_cpp/share/center_follow_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
install/disparity_autodrive/share/disparity_autodrive/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/f1_keyboard_teleop/lib/f1_keyboard_teleop/: keyboard_teleop
install/f1_keyboard_teleop/share/f1_keyboard_teleop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/f1tenth_gym_ros/share/f1tenth_gym_ros/: package.sh  package.xml
install/slam_toolbox/share/: rviz_plugins.xml
install/vesc/share/vesc/: local_setup.bash  (+5 more)
joon_path_generate/etc/centerline/: f1tenth_korea_3rd_centerline.csv  gap_map_final_centerline.csv
joon_path_generate/etc/centerline_with_boundary/: 0826.csv  f1_re.csv  gap_map_path.csv  poloyfit.csv
joon_path_generate/etc/edt_results/: gap_map_final_edt_track_with_viz.csv
joon_path_generate/final_centerline/output/: f1tenth_korea_3rd_centerline.csv  f1tenth_korea_3rd_centerline_with_widths.csv
joon_path_generate/final_centerline/src/: fit_centerline.py  fit_centerline_gui.py  parameter_gui.py
joon_path_generate/final_steven_gong/Raceline-Optimization/: main_globaltraj_f110.py  requirements.txt
joon_path_generate/global_racetrajectory_optimization/: export_f1_re_trajectory.py  f1_re_accurate_visualization.py  f1_re_comparison.py  modern_raceline_optimizer.py
joon_path_generate/maps/: Silverstone_map.csv  Silverstone_map.yaml  f1tenth_korea_3rd.csv  f1tenth_korea_3rd.pgm  f1tenth_korea_3rd.yaml  f1tenth_korea_3rd_reexported.csv  gap_map_final.csv
joon_path_generate/raceline/: 0826-2_raceline.csv  0826-2_raceline_full.csv  0826-2_raceline_with_velocity.csv  gap_map_path_raceline.csv  gap_map_path_raceline_full.csv  gap_map_path_raceline_with_velocity.csv
joon_path_generate/src/: generate_boundary.py  main_globaltraj.py  pixel2point.py
joon_path_generate/src/params/: f110.ini
joon_path_generate/src/temp/: converted_track.csv
log/: latest_build  latest_list
map_topic_data/: map_topic_data_0.db3  metadata.yaml
maps/: 0808_1.pgm  0808_1.yaml  0818.pgm  0818.yaml  centerline.csv  centerline_with_distances.csv  f1tenth_korea_3rd.pgm  f1tenth_korea_3rd_centerline.csv  gap_map_2.pgm  gap_map_2.yaml  gap_map_final.yaml  gap_map_final_centerline.csv  gap_map_final_processed.pgm  joon_map_2.pgm  joon_map_2.yaml  joy_map_1.pgm  joy_map_1.yaml  joy_map_3.pgm  joy_map_3.yaml  test_1.pgm  test_1.yaml  test_blank.pgm  test_blank.yaml  test_track.csv  test_track_reorder.csv  track_points.csv
path_generate/center-line-fitting/: README.md  centerline_gui.py  f1tenth_korea_3rd.json  gap_map_final.json
path_generate/center-line-fitting/src/: fit_centerline.py  fit_centerline_gui.py  parameter_gui.py
path_generate/centerline/: f1tenth_korea_3rd_reexported_centerline.csv  gap_map_final_centerline.csv
path_generate/centerline_with_boundary/: gap_map_path.csv
path_generate/edt_results/: gap_map_final_edt_fitcenterline.csv  gap_map_final_edt_fitcenterline_raceline.csv
path_generate/global_racetrajectory_optimization/: Readme_ko.md  correct_convention_test.py  export_f1_re_trajectory.py  f1_re_accurate_visualization.py  main_globaltraj.py  requirements.txt  smooth_centerline_test.py  visualize_original_track.py
path_generate/maps/: Silverstone_map.pgm  f1tenth_korea_3rd _reexported.yaml  f1tenth_korea_3rd_reexported.pgm  gap_map_final.pgm  track_edges.csv
path_generate/raceline/: gap_map_raceline.csv
path_generate/src/: fit_centerline.py  generate_boundary.py
src/: .mpc_node.cpp.swp  mpc_node.cpp
src/center_follow_cpp/: CMakeLists.txt  package.xml
src/center_follow_cpp/src/: center_follow_node.cpp
src/disparity_autodrive/: CMakeLists.txt  package.xml
src/disparity_autodrive/src/: disparity_autodrive_node.cpp
src/f1tenth_slam_nav/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/f1tenth_slam_nav/config/: amcl_config.yaml  cartographer_config.lua  localization_with_path.rviz  slam_toolbox_config.yaml
src/f1tenth_slam_nav/f1tenth_slam_nav/: slam_nav_manager.py
src/f1tenth_slam_nav/launch/: localization_launch.py  slam_launch.py  slam_nav_launch.py  slam_nav_manager_launch.py
src/f1tenth_slam_nav/src/: slam_nav_manager.cpp
src/f1tenth_system/f1tenth_stack/: setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/key_teleop/: CMakeLists.txt  LICENSE
src/key_teleop/src/: keyboard_teleop.cpp
src/lidar_processing/: CMakeLists.txt  package.xml
src/lidar_processing/src/: gap_follow_node.cpp  lidar_node.cpp  wall_follow_node.cpp
src/log/: latest_build
src/path_follow/: CMakeLists.txt
src/path_follow/launch/: path_follow_launch.py
src/path_follow/src/: path_follow_node.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/launch/: planner_launch.py
src/path_planner/src/: centerline.cpp  min_curvature_planner.cpp
src/pygame_key_teleop/: package.xml  setup.cfg  setup.py
src/pygame_key_teleop/pygame_key_teleop/: teleop_node.py
src/scan_tools/: CMakeLists.txt
(+934 files in other folders)
