<?xml version="1.0"?>
<package format="3">
  <name>disparity_autodrive</name>
  <version>1.0.0</version>
  <description>Disparity-based autonomous driving algorithm with Pure Pursuit and visualization</description>
  <maintainer email="ojg@todo.todo">ojg</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

